--- a/task07/package.json
+++ b/task07/package.json
@@ -1,7 +1,16 @@
 {
+  "name": "task07",
+  "version": "1.0.0",
+  "description": "High level project overview - business value it brings, non-detailed technical overview.",
+  "main": "code.js",
+  "type": "module",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@aws-appsync/utils": "^1.12.0",
-    "@aws-sdk/client-dynamodb": "^3.758.0",
     "uuid": "^11.1.0"
   }
 }
